# AI-to-Everything

./: CONTRIBUTING.md  LICENSE  README.md
examples/ai-agent-demo/: README.md
examples/ai-agent-demo/python/: main.py
examples/provider-demo/: README.md  protocol.yaml
examples/provider-demo/python/: main.py  requirements.txt
sdk/go/: README.md  client.go  go.mod
sdk/javascript/: README.md  package.json
sdk/javascript/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/a2e/: __init__.py  client.py  exceptions.py  models.py
spec/: a2e-protocol-spec.md
