[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2e-protocol"
version = "1.0.0"
description = "A2E (Agent-to-EveryThing) Protocol Python SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "A2E Protocol Contributors", email = "contact@a2e-platform.com"}
]
keywords = ["a2e", "ai", "agent", "protocol", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/gulou69/AI-to-Everything"
Documentation = "https://github.com/gulou69/AI-to-Everything/tree/main/sdk/python"
Repository = "https://github.com/gulou69/AI-to-Everything"
Issues = "https://github.com/gulou69/AI-to-Everything/issues"

[tool.setuptools.packages.find]
include = ["a2e*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
